[package]
name = "hex_gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
winit = "0.27.5"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.5"
raw-window-handle = "0.5.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

[package.metadata.android]
resources = "res/"

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Hex GoL"

[package.metadata.android.application.activity]
resizeable_activity = false